cmake_minimum_required(VERSION 3.23)
project(DataStructure C)

set(CMAKE_C_STANDARD 99)


add_executable(4.StandardIO_2 01-array/4.StandardIO_2.c 01-array/5.InsertAndDeleteArgsArray.c)
add_executable(5.InsertAndDeleteArgsArray 01-array/5.InsertAndDeleteArgsArray.c)
add_executable(DOLinkedList 08-linkedList/DOLinkedList.c)
add_executable(FreeProject 08-linkedList/FreeProject.c)
add_executable(test 08-linkedList/test.c)